looks like everything is rebuilt

--- a/raw/social-media.html
+++ b/raw/social-media.html
@@ -70,7 +70,7 @@ http://education.adelphi.edu/ed-tech
 <h2>Course Readings &amp; Bibliography</h2>
 <p><em>There are no required texts for this course</em>.</p>
 <p>Barabasi, A. (2003). <em>Linked: How Everything Is Connected to Everything Else and What It Means</em>. New York, NY: Plume. ISBN 0452284392</p>
-<p>boyd, D. (2008). <em>Taken out of context: American teen sociality in networked publics</em> (Doctoral dissertation). <a href="http://www.danah.org/papers/TakenOutOfContext.pdf" class="uri">http://www.danah.org/papers/TakenOutOfContext.pdf</a></p>
+<p>boyd, D. (2008). <em>Taken out of context: American teen sociality in networked publics</em> (Doctoral dissertation). <a href="http://www.danah.org/papers/TakenOutOfContext.pdf">http://www.danah.org/papers/TakenOutOfContext.pdf</a></p>
 <p>Brown, J. S., &amp; Adler, R. (2008). Minds on Fire: Open Education, the Long Tail, and Learning 2.0. <em>Educase Review</em>, <em>43</em>(1), 16-32.</p>
 <p>Brown, J. S., &amp; Davison, L. (2010). <em>The Power of Pull: How Small Moves, Smartly Made, Can Set Big Things in Motion</em>. Basic Books.</p>
 <p>Institute of Psychology, University of Oslo. (2007). A Study of Self Presentation in the Light of Facebook. Retrieved from <a href="http://folk.ulo.no/">http://folk.ulo.no</a>.</p>
@@ -79,13 +79,13 @@ http://education.adelphi.edu/ed-tech
 <p>Lewis, S., Pea, R., &amp; Rosen, J. (2010). Collaboration with mobile media – Shifting from ‘participation’ to ‘co-creation’. Proceedings of the Sixth International IEEE Conference on Wireless, Mobile, and Ubiquitous Technologies in Education (WMUTE), pp. 112-116, Kaohsiung, Taiwan.<strong>(not in library)</strong></p>
 <p>Namsu, P., &amp; Valenzuela, S. (2009). Being Immersed in Social Networking Environment: Facebook Groups, User Gratifications, and Social Outcomes. CyberPsychology and Behavior, 12 (6), 729-733.</p>
 <p>Pelling,E.L., &amp; White, K.M. (2009). The Theory of Planned Behavior Applied to Young People’s Use of Social Networking Web Sites. CyberPsychology &amp; Behavior, 12(6), 755-759.</p>
-<p>Pew Internet and American Life Project. (2010). Internet and Social Media and Mobile Internet Use Among Teens and Young Adults. Retrieved from <a href="http://www.pewinternet.org/Reports/2010/Social-Media-and-Young-Adults.aspx" class="uri">http://www.pewinternet.org/Reports/2010/Social-Media-and-Young-Adults.aspx</a></p>
-<p>Pew Internet and American Life Project. (2007). Teens and Social Media. Retrieved from <a href="http://www.pewinternet.org/Reports/2007/Teens-and-Social-Media.aspx" class="uri">http://www.pewinternet.org/Reports/2007/Teens-and-Social-Media.aspx</a></p>
+<p>Pew Internet and American Life Project. (2010). Internet and Social Media and Mobile Internet Use Among Teens and Young Adults. Retrieved from <a href="http://www.pewinternet.org/Reports/2010/Social-Media-and-Young-Adults.aspx">http://www.pewinternet.org/Reports/2010/Social-Media-and-Young-Adults.aspx</a></p>
+<p>Pew Internet and American Life Project. (2007). Teens and Social Media. Retrieved from <a href="http://www.pewinternet.org/Reports/2007/Teens-and-Social-Media.aspx">http://www.pewinternet.org/Reports/2007/Teens-and-Social-Media.aspx</a></p>
 <p>Shirky, C. (2010). <em>Cognitive Surplus: Creativity and Generosity in a Connected Age</em>. Penguin Press HC. ISBN 1594202532</p>
 <p>Sunstein, C. R. (2006). <em>Infotopia: How Many Minds Produce Knowledge</em>. Oxford University Press, USA. ISBN 0195189280</p>
 <p>Wakefield, M. A., &amp; Rice, C. J. (2008). The impact of cyber-communication on today’s youth (ACAPCD-14). Alexandria, VA: American Counseling Association.</p>
 <p>*Wallis**, C. (2010). The impacts of media multitasking on children’s learnng and development: Report from a research seminar, New York, NY: The Joan Ganz Cooney Center at Sesame Workshop.*</p>
-<p>Zittrain, J. (2008). <em>The Future of the Internet—And How to Stop It. Yale University Press. ISBN 0300124872 <a href="http://futureoftheinternet.org/download" class="uri">http://futureoftheinternet.org/download</a></em></p>
+<p>Zittrain, J. (2008). <em>The Future of the Internet—And How to Stop It. Yale University Press. ISBN 0300124872 <a href="http://futureoftheinternet.org/download">http://futureoftheinternet.org/download</a></em></p>
 </section>
 <section id="class-sessions" class="level2">
 <h2>Class Sessions</h2>
@@ -239,20 +239,8 @@ http://education.adelphi.edu/ed-tech
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Sunday, 01. February 2015 09:01PM</tt></p>
+        <p><tt>Last modified: Friday, 06. February 2015 11:17AM</tt></p>
     
-        <!-- Piwik -->
-    <script type="text/javascript">
-    var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
-    document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-    </script><script type="text/javascript">
-    try {
-        var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
-        piwikTracker.trackPageView();
-        piwikTracker.enableLinkTracking();
-    } catch( err ) {}
-    </script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
-    <!-- End Piwik Tracking Code -->
     
   </div>
 </div>
