--- a/raw/digital-literacies.html
+++ b/raw/digital-literacies.html
@@ -97,6 +97,7 @@ We ask, but do not require, that attribution includes a link to our websites (ab
 version: 2.1
 Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-courses
 -->
+
 <p><strong>Educational Technology 0858-501, Spring 2015</strong></p>
 <p><strong>Key words:</strong> digital literacies, multileracies, new literacy, semantics, new media, communication theory, youth media, media studies, software studies</p>
 <section id="description" class="level1">
@@ -431,8 +432,8 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 <li><a href="http://www.smashingmagazine.com/">Smashing Magazine</a></li>
 <li><a href="http://www.nngroup.com/articles/">Nielsen/Norman Group</a></li>
 <li><a href="http://en.wikipedia.org/wiki/Section_508_Amendment_to_the_Rehabilitation_Act_of_1973">United States Section 508</a></li>
-<li><a href="https://www.section508.gov/" class="uri">https://www.section508.gov/</a></li>
-<li><a href="http://webaim.org/standards/508/checklist" class="uri">http://webaim.org/standards/508/checklist</a></li>
+<li><a href="https://www.section508.gov/">https://www.section508.gov/</a></li>
+<li><a href="http://webaim.org/standards/508/checklist">http://webaim.org/standards/508/checklist</a></li>
 <li><a href="http://www.usability.gov/index.html">Usability.gov</a></li>
 <li><a href="http://www.usability.gov/guidelines/guidelines_book.pdf">Research-Based Web Design &amp; Usability Guidelines</a></li>
 <li><a href="http://www.december.com/html/spec/color.html">hex/html color chart</a></li>
@@ -488,20 +489,8 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Sunday, 01. February 2015 09:01PM</tt></p>
+        <p><tt>Last modified: Friday, 06. February 2015 11:17AM</tt></p>
     
-        <!-- Piwik -->
-    <script type="text/javascript">
-    var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
-    document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-    </script><script type="text/javascript">
-    try {
-        var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
-        piwikTracker.trackPageView();
-        piwikTracker.enableLinkTracking();
-    } catch( err ) {}
-    </script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
-    <!-- End Piwik Tracking Code -->
     
   </div>
 </div>
