changes to school networks with html output

--- a/raw/school-networks.html
+++ b/raw/school-networks.html
@@ -101,7 +101,7 @@ http://education.adelphi.edu/ed-tech
 <tr class="even">
 <td style="text-align: left;">4</td>
 <td style="text-align: left;">Thu Jun 4</td>
-<td style="text-align: left;">Networks &amp; Web Servers</td>
+<td style="text-align: left;">Networks</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">5</td>
@@ -111,7 +111,7 @@ http://education.adelphi.edu/ed-tech
 <tr class="even">
 <td style="text-align: left;">6</td>
 <td style="text-align: left;">Thu Jun 11</td>
-<td style="text-align: left;">Mid Point Exam</td>
+<td style="text-align: left;">Midpoint Exam</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">7</td>
@@ -121,12 +121,12 @@ http://education.adelphi.edu/ed-tech
 <tr class="even">
 <td style="text-align: left;">8</td>
 <td style="text-align: left;">Thu Jun 18</td>
-<td style="text-align: left;">Web Applications (pt 1)</td>
+<td style="text-align: left;">Web Servers</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">9</td>
 <td style="text-align: left;">Tue Jun 23</td>
-<td style="text-align: left;">Web Applications (pt 2)</td>
+<td style="text-align: left;">Web Applications</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">10</td>
@@ -283,20 +283,8 @@ http://education.adelphi.edu/ed-tech
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Tuesday, 26. May 2015 12:03PM</tt></p>
+        <p><tt>Last modified: Thursday, 28. May 2015 01:03PM</tt></p>
     
-        <!-- Piwik -->
-    <script type="text/javascript">
-    var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
-    document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-    </script><script type="text/javascript">
-    try {
-        var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
-        piwikTracker.trackPageView();
-        piwikTracker.enableLinkTracking();
-    } catch( err ) {}
-    </script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
-    <!-- End Piwik Tracking Code -->
     
   </div>
 </div>
