--- a/raw/open-ed.html
+++ b/raw/open-ed.html
@@ -733,7 +733,7 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Friday, 06. February 2015 11:17AM</tt></p>
+        <p><tt>Last modified: Thursday, 28. May 2015 01:03PM</tt></p>
     
     
   </div>
