--- a/raw/digital-literacies.html
+++ b/raw/digital-literacies.html
@@ -23,11 +23,14 @@ http://education.adelphi.edu/ed-tech
     <li><a href="#class-information">Class Information</a></li>
     <li><a href="#goals-objectives">Goals &amp; objectives</a></li>
     <li><a href="#class-sessions">Class sessions</a><ul>
-    <li><a href="#day1-critical-literacy">Day1: Critical literacy</a><ul>
+    <li><a href="#dates-and-schedule">Dates and Schedule</a></li>
+    <li><a href="#week-0-getting-ready-for-digital-literacies">Week 0: Getting ready for Digital Literacies</a></li>
+    <li><a href="#week-1-critical-literacy">Week 1: Critical literacy</a><ul>
     <li><a href="#readings-due">Readings due:</a></li>
     <li><a href="#workshop">Workshop</a></li>
     </ul></li>
-    <li><a href="#dayday-2-multiliteracies">DayDay 2: Multiliteracies</a><ul>
+    <li><a href="#week-2-what-is-literacy">Week 2: What is Literacy</a></li>
+    <li><a href="#week-3-multiliteracies">Week 3: Multiliteracies</a><ul>
     <li><a href="#readings-due-1">Readings due:</a></li>
     <li><a href="#workshop-1">Workshop</a></li>
     </ul></li>
@@ -97,7 +100,8 @@ We ask, but do not require, that attribution includes a link to our websites (ab
 version: 2.1
 Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-courses
 -->
-<p><strong>Educational Technology 0858-501, Spring 2015</strong></p>
+
+<p><strong>Educational Technology 0858-501, Fall 2015</strong></p>
 <p><strong>Key words:</strong> digital literacies, multileracies, new literacy, semantics, new media, communication theory, youth media, media studies, software studies</p>
 <section id="description" class="level1">
 <h1>Description</h1>
@@ -111,18 +115,9 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 <ul>
 <li><a href="http://matt.curinga.com">Matthew X. Curinga</a>, <a href="mailto:mcuringa@adelphi.edu">mcuringa@adelphi.edu</a></li>
 </ul>
+<p><strong>Class dates:</strong> Monday, Sep 21 - Wed Dec 23</p>
 <p><strong>Class meetings:</strong></p>
-<p>Classes meet 9am-1pm at Adelphi Manhattan.</p>
-<ol type="1">
-<li>Wedenesday, 8/20</li>
-<li>Thurdsay, 8/21</li>
-<li>Friday, 8/22</li>
-<li>Saturday, 8/23</li>
-<li>Tuesday, 8/26</li>
-<li>Wedenesday, 8/27</li>
-<li>Thurdsay, 8/28</li>
-<li>Friday, 8/29</li>
-</ol>
+<p>This is an <em>asynchronous</em> online class, which will run on a weekly schdedule, Monday-Sunday, beginning Monday, September 21. Each week, there will be short deadlines to post to the course website and complete other assignments. You <strong>must</strong> commit to checking the online course materials (email, Moodle, other communications) every day during the course. For us to be able to study together, it is crucial that everyone respect deadlines and submits their work on time.</p>
 <p><strong>Office hours:</strong></p>
 <ul>
 <li>Wed, Thurs, Friday, 12-1pm</li>
@@ -132,7 +127,7 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 <h1>Goals &amp; objectives</h1>
 <p>Two overarching goals drive this course. First, students should understand the literacy skills required to critically interpret digital texts. Second, they should learn how to communicate effectively using the tools and techniques of digital media. More specifically:</p>
 <ul>
-<li>Students will develop a conception of “digital literacy” as a multifaceted, social process of decoding audio and visual symbols and signals.</li>
+<li>Students will develop a conception of “digital literacy” as a multifaceted, social process of decoding textuaul, audio, and visual symbols and signals.</li>
 <li>Students will gain a familiarity with a range of research perspectives which engage with digital literacy.</li>
 <li>Students will refine their understanding of the affordances of a range of media, and these features’ implications for literacy.</li>
 <li>Students will confront and assess their own preconceived ideas about literacy and technology skills and how learners acquire them.</li>
@@ -142,13 +137,151 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 </section>
 <section id="class-sessions" class="level1">
 <h1>Class sessions</h1>
-<section id="day1-critical-literacy" class="level2">
-<h2>Day1: Critical literacy</h2>
+<section id="dates-and-schedule" class="level3">
+<h3>Dates and Schedule</h3>
+<table>
+<thead>
+<tr class="header">
+<th style="text-align: left;">Week</th>
+<th style="text-align: left;">Start</th>
+<th style="text-align: left;">End</th>
+<th style="text-align: left;">Topic</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">21-Sep</td>
+<td style="text-align: left;">27-Sep</td>
+<td style="text-align: left;">Critical literacy</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">2</td>
+<td style="text-align: left;">28-Sep</td>
+<td style="text-align: left;">4-Oct</td>
+<td style="text-align: left;">What is Literacy?</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">3</td>
+<td style="text-align: left;">5-Oct</td>
+<td style="text-align: left;">11-Oct</td>
+<td style="text-align: left;">Multiliteracies</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">4</td>
+<td style="text-align: left;">12-Oct</td>
+<td style="text-align: left;">18-Oct</td>
+<td style="text-align: left;">New Media</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">5</td>
+<td style="text-align: left;">19-Oct</td>
+<td style="text-align: left;">25-Oct</td>
+<td style="text-align: left;">Digital Studio 1 (HTML &amp; Image editing)</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">6</td>
+<td style="text-align: left;">26-Oct</td>
+<td style="text-align: left;">1-Nov</td>
+<td style="text-align: left;">Media Literacy</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">7</td>
+<td style="text-align: left;">2-Nov</td>
+<td style="text-align: left;">8-Nov</td>
+<td style="text-align: left;">Images &amp; Visuality</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">8</td>
+<td style="text-align: left;">9-Nov</td>
+<td style="text-align: left;">15-Nov</td>
+<td style="text-align: left;">Power, Media, and Race</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">9</td>
+<td style="text-align: left;">16-Nov</td>
+<td style="text-align: left;">22-Nov</td>
+<td style="text-align: left;">Power, Media, and Gender</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">10</td>
+<td style="text-align: left;">23-Nov</td>
+<td style="text-align: left;">29-Nov</td>
+<td style="text-align: left;">Privacy &amp; Security</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">11</td>
+<td style="text-align: left;">30-Nov</td>
+<td style="text-align: left;">6-Dec</td>
+<td style="text-align: left;">Data, big and small</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">12</td>
+<td style="text-align: left;">7-Dec</td>
+<td style="text-align: left;">13-Dec</td>
+<td style="text-align: left;">Visualizing Data</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">13</td>
+<td style="text-align: left;">14-Dec</td>
+<td style="text-align: left;">20-Dec</td>
+<td style="text-align: left;">Computational Thinking</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">14</td>
+<td style="text-align: left;">21-Dec</td>
+<td style="text-align: left;">23-Dec</td>
+<td style="text-align: left;">Digital Studio 2</td>
+</tr>
+</tbody>
+</table>
+</section>
+<section id="week-0-getting-ready-for-digital-literacies" class="level2">
+<h2>Week 0: Getting ready for Digital Literacies</h2>
+<p>Before our first class meeting, you must get your environment set-up and be ready to go.</p>
+<p>Please go through this checklist:</p>
+<ul>
+<li>installed all required software</li>
+<li>can log into Moodle and Google with your adelphi.edu account</li>
+<li>can shot and capture video of myself (and audio)</li>
+<li>have done a practice google hangout with a friend</li>
+<li>created an account on Slack using your adelphi.edu email, joined #auedtech group</li>
+</ul>
+<p>This is a technical course, and expects students to come with some basic technical expertise. In particular:</p>
+<ul>
+<li>you should be an <em>advanced</em> user of your own computer operating system:
+<ul>
+<li>you should be comfortable installing and customizing new software</li>
+<li>freeing up room on your harddrive if it is full</li>
+<li>backing up important work</li>
+<li>understanding how (and where!) files are stored on your computer</li>
+</ul></li>
+<li>you should be a competent user of the internet:
+<ul>
+<li>be able to install necessary plugins to access different media</li>
+<li>understand basic internet troubleshooting
+<ul>
+<li>when you can’t reach a website, is the problem on your end or on the website’s end?</li>
+<li>what do you do if you can’t connect to the wifi in your home, library, or cafe?</li>
+</ul></li>
+<li>have a system for generating and securing passwords and logins for multiple websites</li>
+</ul></li>
+<li>you should be an advanced user of media:
+<ul>
+<li>can transfer photos and video from your camera or phone to your computer</li>
+<li>can download and play video in audio in multiple formats (.avi, .mov, .mpg, .aac, .mp3, etc)</li>
+<li>can particpate in video chat, with good clear audio and video (use headphones for sure, and a mic if possible)
+<ul>
+<li>you have done this using Skype, iChat, Google Hangout, etc</li>
+</ul></li>
+</ul></li>
+</ul>
+</section>
+<section id="week-1-critical-literacy" class="level2">
+<h2>Week 1: Critical literacy</h2>
 <section id="readings-due" class="level3">
 <h3>Readings due:</h3>
 <p>Freire, P. (1971). Chapter 2 from <em>Pedagogy of the Oppressed</em>. (M. B. RAMOS, Trans.). New York: Herder and Herder.</p>
-<p>Gee, J. P. (1989). What Is Literacy? <em>Journal of Education</em>, <em>171</em>(1), 18–25.</p>
-<p>Delpit, L. D. (1992). Acquisition of literate discourse: Bowing before the master? <em>Theory into Practice</em>, <em>31</em>(4), 296–302.</p>
 </section>
 <section id="workshop" class="level3">
 <h3>Workshop</h3>
@@ -157,8 +290,13 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 </ul>
 </section>
 </section>
-<section id="dayday-2-multiliteracies" class="level2">
-<h2>DayDay 2: Multiliteracies</h2>
+<section id="week-2-what-is-literacy" class="level2">
+<h2>Week 2: What is Literacy</h2>
+<p>Gee, J. P. (1989). What Is Literacy? <em>Journal of Education</em>, <em>171</em>(1), 18–25.</p>
+<p>Delpit, L. D. (1992). Acquisition of literate discourse: Bowing before the master? <em>Theory into Practice</em>, <em>31</em>(4), 296–302.</p>
+</section>
+<section id="week-3-multiliteracies" class="level2">
+<h2>Week 3: Multiliteracies</h2>
 <section id="readings-due-1" class="level3">
 <h3>Readings due:</h3>
 <p>The New London Group. (1996). A pedagogy of multiliteracies: Designing social futures. <em>Harvard Educational Review</em>, 66(1), 60-92.</p>
@@ -431,8 +569,8 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
 <li><a href="http://www.smashingmagazine.com/">Smashing Magazine</a></li>
 <li><a href="http://www.nngroup.com/articles/">Nielsen/Norman Group</a></li>
 <li><a href="http://en.wikipedia.org/wiki/Section_508_Amendment_to_the_Rehabilitation_Act_of_1973">United States Section 508</a></li>
-<li><a href="https://www.section508.gov/" class="uri">https://www.section508.gov/</a></li>
-<li><a href="http://webaim.org/standards/508/checklist" class="uri">http://webaim.org/standards/508/checklist</a></li>
+<li><a href="https://www.section508.gov/">https://www.section508.gov/</a></li>
+<li><a href="http://webaim.org/standards/508/checklist">http://webaim.org/standards/508/checklist</a></li>
 <li><a href="http://www.usability.gov/index.html">Usability.gov</a></li>
 <li><a href="http://www.usability.gov/guidelines/guidelines_book.pdf">Research-Based Web Design &amp; Usability Guidelines</a></li>
 <li><a href="http://www.december.com/html/spec/color.html">hex/html color chart</a></li>
@@ -488,20 +626,8 @@ Based on work available here: https://github.com/mcuringa/adelphi-ed-tech-course
       You are encouraged to modify and teach this course under the terms of the license.
       </p>
 
-        <p><tt>Last modified: Tuesday, 26. May 2015 11:58AM</tt></p>
+        <p><tt>Last modified: Tuesday, 01. September 2015 11:42AM</tt></p>
     
-        <!-- Piwik -->
-    <script type="text/javascript">
-    var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
-    document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-    </script><script type="text/javascript">
-    try {
-        var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
-        piwikTracker.trackPageView();
-        piwikTracker.enableLinkTracking();
-    } catch( err ) {}
-    </script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
-    <!-- End Piwik Tracking Code -->
     
   </div>
 </div>
