--- a/tmpl/adelphi.html
+++ b/tmpl/adelphi.html
@@ -135,7 +135,7 @@ $endif$
         </div>
         $if(toc)$
           <div class="col-md-3 col-sm-2" role="complimentary">
-              <nav id="TOC" class="hidden-print hidden-xs hidden-sm"
+              <nav id="TOC" class="d-print-none d-sm-none d-xs-none"
                    data-spy="affix" data-offset-top="20" data-offset-bottom="200">
                    <h3>Course Outline</h3>
                   $toc$
