update home link in template

--- a/tmpl/adelphi.html
+++ b/tmpl/adelphi.html
@@ -68,7 +68,7 @@ $endfor$
 <header id="adelphi-header" class="container">
   <nav class="navbar navbar-light bg-light">
     <div class="container">
-      <a href="/"><img src="img/au-word-gold.png" alt="adelphi university"></a>
+      <a href="https://adelphi-ed-tech.github.io/au-courses/"><img src="img/au-word-gold.png" alt="adelphi university"></a>
       <a class="btn btn-outline-dark no-print" href="https://online.adelphi.edu/online-ed-tech/">Graduate Program in Educational Technology</a>
     </div>
   </nav>
