fixed link in template, added plan-of-study

--- a/tmpl/adelphi.html
+++ b/tmpl/adelphi.html
@@ -66,7 +66,7 @@ $endfor$
 
 <!-- Fixed navbar -->
 <header id="adelphi-header" class="container">
-  <nav class="navbar navbar-light bg-light">
+  <nav class="navbar navbar-light bg-light mx-0">
     <div class="container">
       <a href="https://adelphi-ed-tech.github.io/au-courses/"><img src="img/au-word-gold.png" alt="adelphi university"></a>
       <a class="btn btn-outline-dark no-print" href="https://online.adelphi.edu/online-ed-tech/">Graduate Program in Educational Technology</a>
@@ -229,7 +229,7 @@ suitable arrangements for make-ups or other satisfaction of academic requirement
     $endfor$
     </ul>
     This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.<br />
-    Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/mcuringa/adelphi-ed-tech-courses" rel="dct:source">https://github.com/mcuringa/adelphi-ed-tech-courses</a>.
+    Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://adelphi-ed-tech.github.io/au-courses/" rel="dct:source">https://adelphi-ed-tech.github.io/au-courses/</a>.
 
 $if(date)$
 <p><tt>Last modified: $date$</tt></p>
